# pepper-sample

.qi/: worktree.xml
test/: CMakeLists.txt  qiproject.xml
test/build-mytoolchainA/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
test/build-mytoolchainA/sdk/share/qi/: path.conf
vision/: CMakeLists.txt  CMakeLists.txt~  main.cpp  main.cpp~
vision/build-vision/: CMakeCache.txt  Makefile  cmake_install.cmake
vision/build-vision/sdk/share/qi/: path.conf
